[package]
name = "bitski-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitski = { path = "../bitski", features = ["tracing"] }
clap = {version = "3.1", features = ["derive"]}
dotenv = "0.15"
jsonrpc-core = "18"
serde_json = "1.0"
tokio = { version = "1.0", features = ["rt"] }
tracing = "0.1"
tracing-log  = "0.1"
tracing-subscriber = "0.2"
web3 = "0.18"
