[package]
name = "bitski-provider"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
bitski-chain-models = { version = "0.1.0", path = "../bitski-chain-models" }
jsonrpc-core = "18"
oauth2 = "4.0"
once_cell = "1.14.0"
reqwest = "0.11"
serde = "1.0"
serde_json = "1.0"
tracing = { version = "0.1", optional = true }
web3 = "0.18"

[features]
tracing = ["dep:tracing"]
