[package]
name = "bitski-provider"
version = "0.2.2"
edition = "2021"
description = "Bitski Web3 provider"
license = "Apache-2.0 OR MIT"

[dependencies]
anyhow = "1.0"
bitski-chain-models = { version = "0.2.1", path = "../bitski-chain-models" }
cached = "0.43"
jsonrpc-core = "18"
oauth2 = "4.3"
once_cell = "1.17.1"
reqwest = "0.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = { version = "0.1", optional = true }
web3 = "0.18"

[features]
tracing = ["dep:tracing"]
