[package]
name = "bitski-provider"
version = "0.3.1"
edition = "2021"
description = "Bitski Web3 provider"
license = "Apache-2.0 OR MIT"

[dependencies]
anyhow = "1.0"
async-trait = { version = "0.1", optional =  true}
bitski-chain-models = { version = "0.2.4", path = "../bitski-chain-models" }
ethers = { version = "2.0.11", optional = true }
cached = "0.44"
jsonrpc-core = "18"
oauth2 = "4.3"
once_cell = "1.17.1"
reqwest = "0.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = {version = "1.0", optional = true }
tracing = { version = "0.1", optional = true }
web3 = "0.19"

[features]
default = ["ethers", "tracing"]
ethers = ["dep:ethers", "dep:async-trait", "dep:thiserror"]
tracing = ["dep:tracing"]
