[package]
name = "bitski"
version = "0.1.0"
edition = "2021"

[dependencies]
anvil = { git = "https://github.com/foundry-rs/foundry", rev = "ccb9aa595019ea6fa60abe2d78710a56ea2a6efa", optional = true }
anyhow = "1.0"
bitski-chain-models = { path = "../bitski-chain-models" }
bitski-provider = { path = "../bitski-provider" }
ethers = { version = "0.17.0", optional = true }
jsonrpc-core = "18"
oauth2 = "4.0"
reqwest = "0.11"
serde = "1.0"
serde_json = "1.0"
tracing = { version = "0.1", optional = true }
web3 = "0.18"

[features]
local = ["bitski-chain-models/local", "dep:anvil", "dep:ethers"]
tracing = ["dep:tracing"]
