[package]
name = "bitski"
version = "0.2.2"
edition = "2021"
description = "Bitski Rust SDK"
license = "Apache-2.0 OR MIT"

[dependencies]
anyhow = "1.0"
bitski-chain-models = { version = "0.2.2", path = "../bitski-chain-models" }
bitski-provider = { version = "0.2.2", path = "../bitski-provider" }
jsonrpc-core = "18"
oauth2 = "4.3"
reqwest = "0.11"
serde = "1.0"
serde_json = "1.0"
tracing = { version = "0.1", optional = true }
web3 = "0.18"

[features]
tracing = ["dep:tracing"]
